Coverity analysis defect 120093: Uninitialized scalar field

XMLWordPrintableJSON

    • Fully Compatible
    • ALL
    • Execution Team 2021-06-28
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar field

      The field will contain an arbitrary value left over from earlier computations. A scalar field is not initialized by the constructor
      /src/mongo/db/storage/wiredtiger/wiredtiger_global_options.h:54: UNINIT_CTOR 120093 Class member declaration for "zstdCompressorLevel".
      /src/mongo/db/storage/wiredtiger/wiredtiger_global_options.h:47: UNINIT_CTOR 120093 Non-static class member "zstdCompressorLevel" is not initialized in this constructor nor in any functions that it calls.

            Assignee:
            Gregory Wlodarek
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: