SERVER-56988 Initialize zstdCompressorLevel in WiredTigerGlobalOptions